src/objects/Loop__LoopSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Loop__Decryption_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Decryption is currently only supported with CipherCloud. Contact Drawloop to enable this for your organization.</description>
        <inlineHelpText>Decryption is currently only supported with CipherCloud. Contact Drawloop to enable this for your organization.</inlineHelpText>
        <label>Decryption Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__DocuSign_Account_Ids__c</fullName>
        <inlineHelpText>Enter a semi-colon delimited list of DocuSign Account Ids that this organization, profile, or user can chose from. (Limit 6 Account Ids)</inlineHelpText>
        <label>DocuSign Account Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DocuSign_Account_Names__c</fullName>
        <inlineHelpText>Enter a semi-colon delimited list of Account Names that correspond to the DocuSign Account Ids. (Limit 6 Account Names)</inlineHelpText>
        <label>DocuSign Account Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DocuSign_User_Ids__c</fullName>
        <inlineHelpText>Enter a semi-colon delimited list of DocuSign User Ids that correspond to the DocuSign Account Ids. (Limit 6 User Ids)</inlineHelpText>
        <label>DocuSign User Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Job_Queue_Status_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Queue Status Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Pause_to_Edit_Type__c</fullName>
        <description>Valid options are &quot;Upload&quot; and &quot;Salesforce Files Sync&quot;. (Do not include the quotes.)</description>
        <inlineHelpText>Valid options are &quot;Upload&quot; and &quot;Salesforce Files Sync&quot;. (Do not include the quotes.)</inlineHelpText>
        <label>Pause to Edit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Show_DDP_Wizard_Message__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show DDP Wizard Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Show_Edit_Form_Message__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Edit Form Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Veeva_Vault_Subdomain__c</fullName>
        <description>The customer specific subdomain used for Veeva Vault API calls.</description>
        <label>Veeva Vault Subdomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LOOP Settings</label>
</CustomObject>